--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "heroku-postbuild": "yarn build",
   "eslintConfig": {
     "extends": [
       "react-app",
