--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "heroku-postbuild": "npm install && npm run build"
   },
+  "heroku-postbuild": "yarn build",
   "eslintConfig": {
     "extends": [
       "react-app",
